# building_voice_agents_with_adk_deeplearning_ai

./: .env.example  README.md  run.sh
Lesson_1/: Lesson_1.ipynb  pyproject.toml
Lesson_3/: Lesson_3.ipynb
app_01/: README.md  agent.py
